# open-adaptive-autosar

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.py  docker-compose.yaml
.github/workflows/: ci.yaml
apps/: CMakeLists.txt  README.md
apps/01_hello_world/: CMakeLists.txt  main.cpp
apps/01_hello_world/include/openaa/examples/hello_world/: hello_world_app.hpp
apps/01_hello_world/manifests/: app_execution_manifest.arxml  app_execution_manifest.json  execution_manifest.arxml  execution_manifest.json  hello_world.json
apps/01_hello_world/src/: hello_world_app.cpp
apps/02_app_manifest/: CMakeLists.txt  main.cpp
apps/02_app_manifest/include/openaa/apps/app_manifest/: app_manifest_app.hpp
apps/02_app_manifest/manifests/: application_manifest.arxml  application_manifest.json  execution_manifest.arxml  execution_manifest.json
apps/02_app_manifest/src/: app_manifest_app.cpp
apps/02_tire_pressure/: CMakeLists.txt  main_tp_consumer.cpp  main_tp_provider.cpp  tp_consumer_proxy.h  tp_provider_common.h  tp_provider_skeleton.h  tp_service_manifest.h
apps/02_tire_pressure/manifests/: app_execution_manifest.arxml  service_instance_manifest.arxml
apps/03_tire_pressure/: CMakeLists.txt  README.md  main_tp_consumer.cpp  main_tp_provider.cpp  tp_consumer_common.h  tp_consumer_proxy.h  tp_provider_skeleton.h  tp_service_manifest.h
apps/03_tire_pressure/data/: tire_pressure_data.json
apps/03_tire_pressure/manifests/: app_execution_manifest.arxml  service_instance_manifest.arxml
ara/: README.md
ara/core/: CMakeLists.txt  README.md
ara/core/include/ara/core/: application.hpp
ara/exec/: CMakeLists.txt  README.md
ara/exec/include/ara/exec/: execution_manager.hpp
docker/: build.Dockerfile  runtime.Dockerfile
examples/01_hello_world/: CMakeLists.txt  main.cpp  run_demo_app.sh
examples/01_hello_world/include/openaa/examples/hello_world/: hello_world_app.hpp
examples/01_hello_world/src/: hello_world_app.cpp
include/ara/com/: com_error_domain.h  com_fwd.h  runtime.h  types.h
include/ara/com/service/: find_service_handle.h  instance_identifier.h  sample_ptr.h  service_identifier.h  service_version.h
include/ara/core/: abort.h  application.hpp  core_error_domain.h  core_fwd.h  error_code.h  error_domain.h  future.h  initialization.h  instance_specifier.h  result.h  string.h  vector.h
include/ara/exec/: application.hpp  exec_error_domain.h  exec_fwd.h  execution_client.h  execution_error_event.h  execution_manager.hpp  function_group.h  function_group_state.h  state_client.h
include/ara/log/: logger.hpp
modules/core/: CMakeLists.txt
modules/core/include/openaa/core/: application.hpp
modules/core/src/: application.cpp
modules/exec/: CMakeLists.txt
modules/exec/include/openaa/exec/: execution_manager.hpp
modules/exec/src/: execution_manager.cpp  main.cpp
platform/: CMakeLists.txt  README.md
platform/core/: CMakeLists.txt  README.md
platform/core/include/openaa/core/: application.hpp
platform/core/include/openaa/platform/core/: application.hpp
platform/core/src/: application.cpp
platform/exec/: CMakeLists.txt  README.md
platform/exec/include/openaa/exec/: execution_manager.hpp  manifest_path.hpp
platform/exec/include/openaa/platform/exec/: execution_manager.hpp
platform/exec/manifests/: diagnostics.json
platform/exec/src/: application_manifest_loader.cpp  application_manifest_loader.hpp  execution_manager.cpp  main.cpp  manifest_path.cpp
scripts/ci/: write_test_summary.py
scripts/demo/: run_01_hello_world.sh  run_02_app_manifest.sh  run_02_tire_presure.sh  run_03_tire_pressure.sh  run_hello_world.sh
scripts/lint/: run_clang_format_check.sh  run_clang_format_fix.sh  run_clang_tidy_check.sh  run_clang_tidy_fix.sh
scripts/manifests/: arxml2json.py  merge_execution_manifests.py  verify_arxml.py
scripts/test/: run_smoke_test.sh  run_unit_test.sh
src/: CMakeLists.txt
src/ara/: CMakeLists.txt  README.md
src/ara/com/: CMakeLists.txt  README.md  com_error_domain.cpp  com_runtime_state.cpp  com_runtime_state.hpp  runtime.cpp  shared_memory_ipc.cpp  shared_memory_ipc.hpp  someip_binding_runtime.cpp  someip_binding_runtime.hpp
src/ara/core/: CMakeLists.txt  README.md  abort.cpp  application.cpp  core_error_domain.cpp  initialization.cpp
src/ara/core/include/ara/core/: application.hpp
src/ara/core/src/: application.cpp
src/ara/exec/: CMakeLists.txt  README.md  application.cpp  application_manifest_loader.cpp  em_runtime_state.cpp  em_runtime_state.hpp  exec_error_domain.cpp  execution_client.cpp  execution_manager.cpp  function_group.cpp  function_group_state.cpp  main.cpp  main_exec.cpp  state_client.cpp
src/ara/exec/include/ara/exec/: application_manifest.hpp  execution_manager.hpp  manifest_path.hpp
src/ara/exec/manifests/: diagnostics.json
src/ara/exec/src/: application_manifest_loader.hpp  execution_manager.cpp  main.cpp  manifest_path.cpp
src/ara/log/: CMakeLists.txt  README.md  logger.cpp
src/manifests/: execution_manifest.arxml  machine_manifest.arxml  machine_manifest.json
src/manifests/schema/: autosar.soc
tests/: CMakeLists.txt  README.md
tests/lint/: run_clang_format_check.sh  run_clang_tidy_check.sh
tests/smoke/: CMakeLists.txt  README.md  core_smoke_test.cpp  run_core_smoke_test.sh
tests/unit/: CMakeLists.txt  README.md  abort_test.cpp  com_error_domain_test.cpp  com_runtime_test.cpp  com_service_types_test.cpp  core_application_test.cpp  core_error_domain_test.cpp  execution_manager_manifest_test.cpp  initialization_test.cpp  logger_test.cpp  run_unit_test.sh
